@@ -8,11 +8,11 @@ CLEANFILES                =
 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool --silent
 
-CFLAGS = @CFLAGS@ $(GTK_CFLAGS)
+CFLAGS = @CFLAGS@ $(SDL_CFLAGS) $(GTK_CFLAGS)
 
 bin_PROGRAMS= playdv
 
 noinst_HEADERS=  display.h oss.h
 
 playdv_SOURCES= playdv.c display.c display.h oss.c
-playdv_LDADD= $(GTK_LIBS) $(XV_LIB) ../libdv/libdv.la
+playdv_LDADD= $(SDL_LIBS) $(GTK_LIBS) $(XV_LIB) ../libdv/libdv.la $(POPT_LIB)
