@@ -1,3 +1,8 @@
+2002-11-11  Dan Dennedy  <dan@dennedy.org>
+	* apply XvShm portability patch to playdv/display.c.
+	* apply build updates from Daniel Kobras to prevent core lib
+	  from linking unncessary libs.
+
 2002-11-11  Charles 'Buck' Krasic  <krasic@acm.org>
 
 	* apply patch to dvconnect.c from Charles Yates to fix stdin
